edit on DTOs